visibility fixes

--- a/glance.css
+++ b/glance.css
@@ -190,7 +190,7 @@ a.gt-applause:hover {
 
 #dashboard_right_now div.gt-status a:before {
 	font-size: 16px;
-	margin: 1px 0 0;
+	margin: -1px 0 0 0;
 	padding-right: .25em;
 }
 #dashboard_right_now div.gt-status a.gt-mine:before {
